--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin#index</h1>
-<p>Find me in app/views/admin/index.html.erb</p>
+<h1>Rails MVP Starter Admin</h1>
+<p>
+  <strong>Users: </strong> <%= User.count %>
+</p>
+
+<%= render 'shared/admin_nav' %>
