--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,9 @@
 <h2>Sign up</h2>
 
+<%= google_sign_in_button 'Sign up with Google account', proceed_to: api_v1_process_google_oauth_url %>
+
+<h4> OR </h4>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
