--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag 'application', media: 'all'%>
-  <%= javascript_pack_tag 'application'%>
+  <%#= stylesheet_link_tag 'application', media: 'all'%>
+  <%#= javascript_pack_tag 'application'%>
+
+    <%= javascript_include_tag "application", defer: true %>
+    <%= stylesheet_link_tag "application" %>
 </head>
 
 <body>
