Fix logout and add Bootstrap nav and container

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,13 @@
 
 <body>
 <%= render 'shared/gtm_noscript' %>
-<br><br>
 
 <%= render 'shared/nav' %>
-<%= render 'shared/display_message' %>
-<%= yield %>
+
+<div class="container">
+  <%= render 'shared/display_message' %>
+  <%= yield %>
+</div>
 
 </body>
 </html>
