Tailwind and DaisyUI styling

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Rails MVP Starter Application</h1>
-<div>Welcome!</div>
+<div class="prose lg:prose-xl">
+  <h1>Rails MVP Starter Application</h1>
+  <div>Welcome!</div>
+</div>
