--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,27 +7,27 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="mb-3">
-    <%= f.label :name, class: "form-label" %><br />
-    <%= f.text_field :name, autofocus: true, class: "form-control"  %>
+  <div class="mb-3 form-container">
+    <%= f.label :name, class: "form-label label" %>
+    <%= f.text_field :name, autofocus: true, class: "form-control input input-bordered"  %>
   </div>
 
-  <div class="mb-3">
-    <%= f.label :email, class: "form-label" %><br />
-    <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+  <div class="mb-3 form-container">
+    <%= f.label :email, class: "form-label label" %>
+    <%= f.email_field :email, autocomplete: "email", class: "form-control input input-bordered" %>
   </div>
 
-  <div class="mb-3">
-    <%= f.label :password, class: "form-label" %>
+  <div class="mb-3 form-container">
+    <%= f.label :password, class: "form-label label" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control input input-bordered" %>
   </div>
 
-  <div class="mb-3">
-    <%= f.label :password_confirmation, class: "form-label" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+  <div class="mb-3 form-container">
+    <%= f.label :password_confirmation, class: "form-label label" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control input input-bordered" %>
   </div>
 
   <div class="actions">
