--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csp_meta_tag %>
 
   <%= javascript_include_tag "application", defer: true %>
-  <%= stylesheet_link_tag "bootstrap" %>
+  <%= stylesheet_link_tag "tailwind" %>
 </head>
 
 <body>
