--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,48 @@
-<h2>Sign up</h2>
+<div class="row justify-content-md-center mt-5 grid grid-cols-6 gap-4">
+  <div class="col col-md-5 col-start-3 col-span-3">
 
-<%= google_sign_in_button 'Sign up with Google account', class: 'btn btn-primary', proceed_to: api_v1_process_google_oauth_url %>
+    <div class="card shadow-lg">
+      <div class="card-body">
 
-<h4 class="my-4"> or </h4>
+        <h1 class="display-6 mt-2 mb-4 text-center">Get Started!</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <%= google_sign_in_button class: 'btn btn-blue w-100 w-full rounded-pill', proceed_to: api_v1_process_google_oauth_url do %>
+          <%= image_tag('google.png', alt: 'Google', width: 32, height: 32) %>
+          <span class="p-2">Sign up with Google</span>
+        <% end %>
 
-  <div class="mb-3 form-container">
-    <%= f.label :name, class: "form-label label" %>
-    <%= f.text_field :name, autofocus: true, class: "form-control input input-bordered"  %>
+        <%= render 'devise/shared/or_content' %>
+
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+
+          <div class="mb-3 form-container">
+            <%= f.text_field :name, autofocus: true, class: "form-control input input-bordered", placeholder: 'Name' %>
+          </div>
+
+          <div class="mb-3 form-container">
+            <%= f.email_field :email, autocomplete: "email", class: "form-control input input-bordered", placeholder: 'Email' %>
+          </div>
+
+          <div class="mb-3 form-container">
+            <%= f.password_field :password, autocomplete: "new-password", class: "form-control input input-bordered", placeholder: 'Password' %>
+
+            <% if @minimum_password_length %>
+              <div id="passwordHelpBlock" class="form-text">
+                Your password must be at least <%= @minimum_password_length %> characters long.
+              </div>
+            <% end %>
+
+          </div>
+
+          <div class="actions mt-2">
+            <%= f.submit "Sign up", class: 'btn btn-primary btn-min rounded-pill' %>
+          </div>
+        <% end %>
+
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
+
   </div>
-
-  <div class="mb-3 form-container">
-    <%= f.label :email, class: "form-label label" %>
-    <%= f.email_field :email, autocomplete: "email", class: "form-control input input-bordered" %>
-  </div>
-
-  <div class="mb-3 form-container">
-    <%= f.label :password, class: "form-label label" %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %>
-    <%= f.password_field :password, autocomplete: "new-password", class: "form-control input input-bordered" %>
-  </div>
-
-  <div class="mb-3 form-container">
-    <%= f.label :password_confirmation, class: "form-label label" %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control input input-bordered" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up", class: 'btn btn-primary' %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
