--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,45 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-
-        <li class="nav-item">
-          <%= link_to "Home", root_path, class: 'nav-link' %>
-        </li>
-
-        <% if user_signed_in? %>
-
-          <li class="nav-item">
-            <%= link_to "Account", account_path, class: 'nav-link' %>
-          </li>
-
-          <% if current_user.admin? %>
-            <%= link_to "Admin", admin_path, class: 'nav-link' %>
-          <% end %>
-
-          <li class="nav-item">
-            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-          </li>
-
-        <% else %>
-
-          <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
-
-        <% end %>
-
-      </ul>
-    </div>
-  </div>
-</nav>
-
-
-
-
-
-
-
-
-
+<% if Rails.application.config.css_framework == 'bootstrap' %>
+  <%= render 'shared/bootstrap_nav' %>
+<% else %>
+  <%= render 'shared/tailwind_nav' %>
+<% end %>
