--- a/app/views/devise/shared/_or_content.html.erb
+++ b/app/views/devise/shared/_or_content.html.erb
@@ -1,5 +1,5 @@
-<div class="d-flex align-items-center my-3 py-3 flex flex-row items-center">
-  <hr class="w-100 w-full">
+<div class="d-flex align-items-center my-3 py-3">
+  <hr class="w-100">
   <div class="mx-3"> or</div>
-  <hr class="w-100 w-full">
+  <hr class="w-100">
 </div>
