--- a/app/views/shared/_tailwind_nav.html.erb
+++ b/app/views/shared/_tailwind_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-container navbar mb-2 shadow-lg">
+<div class="navbar-container navbar mb-2 shadow">
   <div class="flex-1">
 
     <%= link_to "Rails MVP Starter", root_path, class: 'text-lg font-bold text-gray-800' %>
