--- a/app/views/credit_cards/new.html.erb
+++ b/app/views/credit_cards/new.html.erb
@@ -1,31 +1,56 @@
 <script src="https://js.stripe.com/v3/"></script>
 
-<h1>New Credit Card</h1>
+<div class="my-5">
+  <h1> Buy Rails MVP Starter for $99</h1>
+</div>
 
-<form id="payment-form">
-  <div id="card-element"><!--Stripe.js injects the Card Element--></div>
-  <button id="submit">
-    <div class="spinner hidden" id="spinner"></div>
-    <span id="button-text">Pay now</span>
-  </button>
-  <p id="card-error" role="alert"></p>
-  <p class="result-message hidden">
-    Payment succeeded, see the result in your
-    <a href="" target="_blank">Stripe dashboard.</a> Refresh the page to pay again.
-  </p>
-</form>
+<div class="card shadow-lg md:w-1/3 w-full">
+  <div class="card-body">
+
+    <div class="mb-2">
+      <h4>Credit card</h4>
+    </div>
+
+    <form id="payment-form">
+
+      <div class="grid grid-cols-2 gap-2">
+
+        <div class="col-span-2">
+          <div id="card-number" class="form-control stripeInput">
+            <!-- Stripe Card Element -->
+          </div>
+        </div>
+        <div>
+          <div id="card-exp" class="form-control stripeInput">
+            <!-- Stripe Card Expiry Element -->
+          </div>
+        </div>
+        <div>
+          <div id="card-cvc" class="form-control stripeInput">
+            <!-- Stripe Card Expiry Element -->
+          </div>
+        </div>
+      </div>
+
+      <button id="submit" class="btn btn-primary mt-2">
+        <div class="spinner hidden" id="spinner"></div>
+        <span id="button-text">Pay now</span>
+      </button>
+      <p id="card-error" role="alert"></p>
+      <p class="result-message hidden">
+        Payment succeeded, see the result in your
+        <a href="" target="_blank">Stripe dashboard.</a> Refresh the page to pay again.
+      </p>
+    </form>
+
+  </div>
+</div>
 
 <script>
 
     // A reference to Stripe.js initialized with your real test publishable API key.
     var stripe = Stripe("<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>");
     const clientSecret = '<%= @payment_intent['client_secret'] %>'
-
-    // The items the customer wants to buy
-    var purchase = {
-        items: [{id: "xl-tshirt"}]
-    };
-
     // Disable the button until we have Stripe set up on the page
     document.querySelector("button").disabled = true;
 
@@ -38,7 +63,7 @@
             fontSmoothing: "antialiased",
             fontSize: "16px",
             "::placeholder": {
-                color: "#32325d"
+                color: "#9ba2af"
             }
         },
         invalid: {
@@ -48,15 +73,33 @@
         }
     };
 
-    var card = elements.create("card", {style: style});
-    // Stripe injects an iframe into the DOM
-    card.mount("#card-element");
+    // Card number
+    var card = elements.create('cardNumber', {
+        'placeholder': 'Card Number',
+        'style': style
+    });
+    card.mount('#card-number');
 
     card.on("change", function (event) {
         // Disable the Pay button if there are no card details in the Element
         document.querySelector("button").disabled = event.empty;
         document.querySelector("#card-error").textContent = event.error ? event.error.message : "";
     });
+
+    // Card expiry
+    var exp = elements.create('cardExpiry', {
+        'placeholder': 'MM/YY',
+        'style': style
+    });
+    exp.mount('#card-exp');
+
+    // CVC
+    var cvc = elements.create('cardCvc', {
+        'placeholder': 'CVC',
+        'style': style
+    });
+    cvc.mount('#card-cvc');
+
 
     var form = document.getElementById("payment-form");
     form.addEventListener("submit", function (event) {
@@ -126,11 +169,11 @@
             // Disable the button and show a spinner
             document.querySelector("button").disabled = true;
             document.querySelector("#spinner").classList.remove("hidden");
-            document.querySelector("#button-text").classList.add("hidden");
+            // document.querySelector("#button-text").classList.add("hidden");
         } else {
             document.querySelector("button").disabled = false;
             document.querySelector("#spinner").classList.add("hidden");
-            document.querySelector("#button-text").classList.remove("hidden");
+            // document.querySelector("#button-text").classList.remove("hidden");
         }
     };
 
