--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,20 +1,20 @@
 <div class="d-flex justify-content-between mt-4 flex justify-between">
 
   <%- if controller_name == 'passwords' %>
-    <%= link_to "Log in", new_session_path(resource_name) %>
-    <%= link_to "Sign up", new_registration_path(resource_name) %>
+    <%= link_to "Log in", new_session_path(resource_name), class: 'link' %>
+    <%= link_to "Sign up", new_registration_path(resource_name), class: 'link' %>
   <% else %>
 
     <%- if controller_name != 'sessions' %>
-      <%= link_to "Already have an account? Log in.", new_session_path(resource_name) %>
+      <%= link_to "Already have an account? Log in.", new_session_path(resource_name), class: 'link' %>
     <% end %>
 
     <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-      <%= link_to "New here? Create a free account.", new_registration_path(resource_name) %>
+      <%= link_to "New here? Create a free account.", new_registration_path(resource_name), class: 'link' %>
     <% end %>
 
     <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-      <%= link_to "Forgot your password?", new_password_path(resource_name) %>
+      <%= link_to "Forgot your password?", new_password_path(resource_name), class: 'link' %>
     <% end %>
 
     <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
