--- a/app/views/shared/_tailwind_nav.html.erb
+++ b/app/views/shared/_tailwind_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-container navbar mb-2 shadow">
   <div class="flex-1">
 
-    <%= link_to "Rails MVP Starter", root_path, class: 'text-lg font-bold text-gray-800' %>
+    <%= link_to "Rails MVP Starter", root_path, class: 'text-lg text-gray-800' %>
 
   </div>
   <div class="flex-none hidden px-2 mx-2 lg:flex">
