--- a/app/views/shared/_tailwind_nav.html.erb
+++ b/app/views/shared/_tailwind_nav.html.erb
@@ -24,6 +24,8 @@
         <%= link_to 'Sign in', new_session_path(resource_name), class: 'btn btn-ghost btn-sm rounded-btn' %>
 
       <% end %>
+
+      <%= link_to 'Pricing', plans_path, class: 'btn btn-ghost btn-sm rounded-btn' %>
     </div>
   </div>
 </div>
