Support for Stripe webhooks

--- a/app/views/credit_cards/new.html.erb
+++ b/app/views/credit_cards/new.html.erb
@@ -194,8 +194,7 @@
         }).then(function (result) {
             return result.json();
         }).then(function (data) {
-            // TODO: route to account page
-            // window.location.href = '/account'
+            window.location.href = '/account'
         })
     }
 
