--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -8,31 +8,12 @@
   <div class="mt-5">
     <h4>Credit Cards</h4>
 
-    <table>
-      <thead>
-      <tr>
-        <th>Last4</th>
-        <th>Brand</th>
-        <th>Exp month</th>
-        <th>Exp year</th>
-        <th>Country</th>
-        <th></th>
-      </tr>
-      </thead>
-
-      <tbody>
+    <div class="flex flex-wrap">
       <% current_user.credit_cards.each do |credit_card| %>
-        <tr>
-          <td><%= credit_card.last4 %></td>
-          <td><%= credit_card.brand %></td>
-          <td><%= credit_card.exp_month %></td>
-          <td><%= credit_card.exp_year %></td>
-          <td><%= credit_card.country %></td>
-          <td><%= link_to 'Remove', credit_card, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
+        <%= render partial: "credit_card", locals: { credit_card: credit_card } %>
       <% end %>
-      </tbody>
-    </table>
+    </div>
+
   </div>
 
 <% else %>
