Support for saving payments

--- a/app/views/account/_credit_card.html.erb
+++ b/app/views/account/_credit_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card shadow w-80">
+<div class="card shadow w-80 m-2">
   <div class="card-body">
     <h2 class="card-title"><%= "#{credit_card.brand} ending in #{credit_card.last4}" %></h2>
     <p>Exp date <%= "#{credit_card.exp_month}/#{credit_card.exp_year}" %></p>
