--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -20,4 +20,13 @@
       <%= link_to 'Subscribe', new_credit_card_path + '?plan=yearly', class: 'btn btn-primary' %>
     </div>
   </div>
+
+  <div class="card shadow md:w-1/3 w-full m-2">
+    <div class="card-body">
+      <h4>Buy now</h4>
+      <h6>$99 one time payment</h6>
+      <%= link_to 'Buy', new_credit_card_path, class: 'btn btn-primary' %>
+    </div>
+  </div>
+
 </div>
