--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
   <%= csp_meta_tag %>
 
   <%= javascript_include_tag "application", defer: true %>
-  <%= stylesheet_link_tag Rails.application.config.css_framework %>
+  <% if !Rails.env.test? %>
+    <%= stylesheet_link_tag Rails.application.config.css_framework %>
+  <% end %>
 </head>
 
 <body>
