--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
 <%= render 'shared/nav' %>
 
-<div>
+<div class="md:container md:mx-auto">
   <%= render 'shared/display_message' %>
   <%= yield %>
 </div>
