--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -43,13 +43,17 @@
       <tbody>
       <% current_user.payments.each do |payment| %>
         <tr>
-          <td><%= number_to_currency(payment.amount/100) %></td>
+          <td><%= number_to_currency(payment.amount / 100) %></td>
           <td><%= payment.description %></td>
           <td><%= payment.status %></td>
-          <td><%= Time.at(payment.created).strftime("%m/%d/%Y")  %></td>
+          <td><%= Time.at(payment.created).strftime("%m/%d/%Y") %></td>
         </tr>
       <% end %>
       </tbody>
     </table>
   </div>
 <% end %>
+
+<div class="my-5">
+  <%= link_to 'Invite Team Members', invitations_path %>
+</div>
