--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -21,3 +21,19 @@ a:hover {
   color: $gray-800;
   text-decoration: underline;
 }
+
+.w-60 {
+  width: 15rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.stroke-current {
+  stroke: currentColor;
+}
