--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -1,6 +1,14 @@
 <h1>Account</h1>
 <p>
+  Company: <%= current_user.company.name %>
+</p>
+
+<p>
   Name: <%= current_user.name %>
+</p>
+
+<p>
+  Email: <%= current_user.email %>
 </p>
 
 <% if current_user.customer? %>
