--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,10 @@
 <div class="row justify-content-md-center mt-5 grid grid-cols-7 gap-4">
   <div class="col col-md-5 col-span-7 md:col-start-3 md:col-span-3">
 
+    <% if @invitation.blank? && session[:invitation_uuid].present? %>
+      <% @invitation = Invitation.find_by_uuid(session[:invitation_uuid]) %>
+    <% end %>
+
     <div class="card shadow-lg">
       <div class="card-body">
 
@@ -22,17 +26,28 @@
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
-          <div class="mb-3 form-container">
-            <%= f.text_field :company_name, autofocus: true, class: "form-control input input-bordered", placeholder: 'Company' %>
-          </div>
+          <% if @invitation.present? %>
+            <h4 class="mt-2 mb-4 text-center">You're Invited!</h4>
 
-          <div class="mb-3 form-container">
-            <%= f.text_field :name, autofocus: true, class: "form-control input input-bordered", placeholder: 'Name' %>
-          </div>
-
-          <div class="mb-3 form-container">
-            <%= f.email_field :email, autocomplete: "email", class: "form-control input input-bordered", placeholder: 'Email' %>
-          </div>
+            <div class="mb-3 form-container">
+              <label class="label">
+                <span class="label-text">Email: <%= @invitation.email %></span>
+              </label>
+            </div>
+            <div class="mb-3 form-container">
+              <%= f.text_field :name, autofocus: true, class: "form-control input input-bordered", placeholder: 'Name' %>
+            </div>
+          <% else %>
+            <div class="mb-3 form-container">
+              <%= f.text_field :company_name, autofocus: true, class: "form-control input input-bordered", placeholder: 'Company' %>
+            </div>
+            <div class="mb-3 form-container">
+              <%= f.text_field :name, autofocus: true, class: "form-control input input-bordered", placeholder: 'Name' %>
+            </div>
+            <div class="mb-3 form-container">
+              <%= f.email_field :email, autocomplete: "email", class: "form-control input input-bordered", placeholder: 'Email' %>
+            </div>
+          <% end %>
 
           <div class="mb-3 form-container">
             <%= f.password_field :password, autocomplete: "new-password", class: "form-control input input-bordered", placeholder: 'Password' %>
@@ -47,6 +62,7 @@
 
           <% if @invitation.present? %>
             <%= f.hidden_field(:invitation_uuid, value: @invitation.uuid) %>
+            <%= f.hidden_field(:email, value: @invitation.email) %>
           <% end %>
 
           <div class="actions mt-2">
@@ -54,7 +70,9 @@
           </div>
         <% end %>
 
-        <%= render "devise/shared/links" %>
+        <% if @invitation.blank? %>
+          <%= render "devise/shared/links" %>
+        <% end %>
       </div>
     </div>
 
