--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between mt-4 flex justify-between">
+<div class="d-flex justify-content-between mt-5 flex justify-between">
 
   <%- if controller_name == 'passwords' %>
     <%= link_to "Log in", new_session_path(resource_name), class: 'link' %>
@@ -10,7 +10,7 @@
     <% end %>
 
     <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-      <%= link_to "New here? Create a free account.", new_registration_path(resource_name), class: 'link' %>
+      <%= link_to "New here? Sign up.", new_registration_path(resource_name), class: 'link' %>
     <% end %>
 
     <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
