--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,13 +1,13 @@
-<div class="px-4 sm:px-6 md:px-8 mb-14 sm:mb-20 xl:mb-8">
-  <h1 class="text-4xl sm:text-6xl lg:text-7xl leading-none font-extrabold tracking-tight text-gray-900 mt-10 mb-8 sm:mt-14 sm:mb-10">
+<div class="px-4 py-5 my-5 text-center">
+  <h1 class="display-2 fw-bold">
     Build Your Rails MVP <span class="text-primary">Faster</span>
   </h1>
-  <p class="max-w-screen-lg text-lg sm:text-2xl sm:leading-10 font-medium mb-10 sm:mb-11">
-    Get a huge head start with the Rails MVP starter application.
-  </p>
-  <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:space-x-4 text-center">
-    <a class="btn btn-primary w-60 min-w-full md:min-w-0" href="#">
-      Get started
-    </a>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">
+      Get a huge head start with the Rails MVP starter application.
+    </p>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+      <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Get Started</button>
+    </div>
   </div>
 </div>
