--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -4,6 +4,10 @@
   @include button-variant($indigo-500, $indigo-500);
 }
 
+.text-primary {
+  color: $indigo-500 !important;
+}
+
 .btn-blue {
   @include button-variant($blue-500, $blue-500);
 }
@@ -20,4 +24,26 @@ a {
 a:hover {
   color: $gray-800;
   text-decoration: underline;
+}
+
+.footer {
+  display: grid;
+  place-items: start;
+  width: 100%;
+  grid-auto-flow: row;
+  font-size: .875rem;
+  line-height: 1.25rem;
+  -moz-column-gap: 1rem;
+  column-gap: 1rem;
+  row-gap: 2.5rem;
+}
+
+@media (min-width:48rem) {
+  .footer {
+    grid-auto-flow: column;
+  }
+
+  .footer-center {
+    grid-auto-flow: row dense;
+  }
 }
