--- a/app/views/static/tailwind_demo.html.erb
+++ b/app/views/static/tailwind_demo.html.erb
@@ -19,12 +19,23 @@
 <div class="container">
   <%= render 'shared/display_message' %>
 
-  <div>
-    <h1>Rails MVP Starter Application</h1>
-    <div>Welcome!</div>
+  <div class="px-4 sm:px-6 md:px-8 mb-14 sm:mb-20 xl:mb-8">
+    <h1 class="text-4xl sm:text-6xl lg:text-7xl leading-none font-extrabold tracking-tight text-gray-900 mt-10 mb-8 sm:mt-14 sm:mb-10">
+      Build Your Rails MVP <span class="text-primary">Faster</span>
+    </h1>
+    <p class="max-w-screen-lg text-lg sm:text-2xl sm:leading-10 font-medium mb-10 sm:mb-11">
+      Get a huge head start with the Rails MVP starter application.
+    </p>
+    <div class="flex flex-wrap space-y-4 sm:space-y-0 sm:space-x-4 text-center">
+      <a class="btn btn-primary w-60 min-w-full md:min-w-0" href="#">
+        Get started
+      </a>
+    </div>
   </div>
 
 </div>
+
+<%= render 'shared/footer_tailwind' %>
 
 </body>
 </html>
