--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -1,2 +1,4 @@
-<h1>Terms and Conditions</h1>
-<p>These are our terms and conditions.  [Insert T&C here]</p>
+<div class="m-5">
+  <h1>Terms and Conditions</h1>
+  <p>These are our terms and conditions. [Insert T&C here]</p>
+</div>
