--- a/app/views/shared/_bootstrap_nav.html.erb
+++ b/app/views/shared/_bootstrap_nav.html.erb
@@ -36,6 +36,7 @@
           </li>
         <% end %>
 
+        <%= link_to 'Pricing', plans_path, class: 'nav-link' %>
       </ul>
     </div>
   </div>
