--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,4 +1,4 @@
-@import 'bootstrap/scss/bootstrap';
+@import 'bootstrap/bootstrap';
 
 .btn-primary {
   @include button-variant($indigo-500, $indigo-500);
