--- a/app/views/credit_cards/new.html.erb
+++ b/app/views/credit_cards/new.html.erb
@@ -4,7 +4,7 @@
   <h1><%= @title %></h1>
 </div>
 
-<div class="card shadow-lg md:w-1/3 w-full">
+<div class="card shadow-lg col-12 col-md-4 mb-3">
   <div class="card-body">
 
     <div class="mb-2">
@@ -13,19 +13,18 @@
 
     <form id="payment-form">
 
-      <div class="grid grid-cols-2 gap-2">
-
-        <div class="col-span-2">
+      <div class="grid" style="--bs-gap: .5rem .5rem;">
+        <div class="g-col-12">
           <div id="card-number" class="form-control stripeInput">
             <!-- Stripe Card Element -->
           </div>
         </div>
-        <div>
+        <div class="g-col-6">
           <div id="card-exp" class="form-control stripeInput">
             <!-- Stripe Card Expiry Element -->
           </div>
         </div>
-        <div>
+        <div class="g-col-6">
           <div id="card-cvc" class="form-control stripeInput">
             <!-- Stripe Card Expiry Element -->
           </div>
