--- a/app/views/templates/dashboard_sidebar.html.erb
+++ b/app/views/templates/dashboard_sidebar.html.erb
@@ -1,42 +1,42 @@
 <div class="d-flex vh-100">
   <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-      <span class="fs-4">Sidebar</span>
+    <a href="/" class="d-flex align-items-center mb-2 me-md-auto text-white text-decoration-none">
+      <span class="fs-4 font-xbold spacing-close">Nimble Labs</span>
     </a>
-    <hr>
+
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
-        <a href="#" class="nav-link active" aria-current="page">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
-          Home
+        <a class="nav-link active" aria-current="page" href="#">
+          <i data-feather="home" class="small-icon me-3"></i><span class="font-sm">Dashboard</span>
         </a>
       </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-          Dashboard
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">
+          <i data-feather="file" class="small-icon me-3"></i><span class="font-sm">Orders</span>
         </a>
       </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-          Orders
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">
+          <i data-feather="shopping-cart" class="small-icon me-3"></i><span class="font-sm">Products</span>
         </a>
       </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-          Products
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">
+          <i data-feather="users" class="small-icon me-3"></i><span class="font-sm">Customers</span>
         </a>
       </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-          Customers
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">
+          <i data-feather="bar-chart-2" class="small-icon me-3"></i><span class="font-sm">Reports</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">
+          <i data-feather="layers" class="small-icon me-3"></i><span class="font-sm">Integrations</span>
         </a>
       </li>
     </ul>
+
     <hr>
     <div class="dropdown">
       <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
