--- a/app/assets/stylesheets/templates.scss
+++ b/app/assets/stylesheets/templates.scss
@@ -1,5 +1,4 @@
 @import 'bootstrap/bootstrap';
-
 @import url('https://rsms.me/inter/inter.css');
 
 body {
@@ -19,3 +18,39 @@ body {
   height: 16px;
   stroke-width: 2;
 }
+
+
+.h-96 {
+  height: 24rem;
+}
+
+.border-dashed {
+  border-style: dashed !important;
+}
+
+// Theme colors
+
+.bg-theme-color {
+  color: $gray-100;
+  background-color: $indigo-500;
+}
+
+.bg-content-theme-color {
+  color: $gray-800;
+  background-color: $gray-200;
+}
+
+
+.bg-theme-active {
+  color: $gray-100;
+  background-color: $indigo-600 !important;
+}
+
+.text-theme-light {
+  color: $indigo-300;
+}
+
+
+
+@import 'fontawesome-all';
+
