--- a/app/views/templates/dashboard_sidebar.html.erb
+++ b/app/views/templates/dashboard_sidebar.html.erb
@@ -1,59 +1,81 @@
+<header class="navbar navbar-dark sticky-top bg-theme-color d-md-none d-flex justify-content-between p-0 shadow">
+  <div class="my-3">
+    <a href="/" class="ms-3 me-md-auto text-white text-decoration-none">
+      <i class="fas fa-flask fs-4 me-2"></i> <span class="fs-4 font-xbold spacing-close">Nimble Labs</span>
+    </a>
+  </div>
+
+  <div class="text-white me-2">
+    <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+</header>
+
 <div class="d-flex vh-100">
-  <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-2 me-md-auto text-white text-decoration-none">
-      <span class="fs-4 font-xbold spacing-close">Nimble Labs</span>
+  <div id="sidebarMenu" class="col-md-3 col-lg-2 d-md-flex flex-column flex-shrink-0 bg-theme-color text-white sidebar collapse">
+    <a href="/" class="d-none d-md-flex align-items-center ms-3 my-3 me-md-auto text-white text-decoration-none">
+      <i class="fa fas fa-flask fs-4 me-2"></i> <span class="fs-4 font-xbold spacing-close">Nimble Labs</span>
     </a>
 
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">
-          <i data-feather="home" class="small-icon me-3"></i><span class="font-sm">Dashboard</span>
+        <a class="nav-link bg-theme-active text-white" aria-current="page" href="#">
+          <i data-feather="home" class="text-theme-light small-icon me-3"></i><span class="font-sm">Dashboard</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" href="#">
-          <i data-feather="file" class="small-icon me-3"></i><span class="font-sm">Orders</span>
+          <i data-feather="file" class="text-theme-light small-icon me-3"></i><span class="font-sm">Orders</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" href="#">
-          <i data-feather="shopping-cart" class="small-icon me-3"></i><span class="font-sm">Products</span>
+          <i data-feather="shopping-cart" class="text-theme-light small-icon me-3"></i><span class="font-sm">Products</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" href="#">
-          <i data-feather="users" class="small-icon me-3"></i><span class="font-sm">Customers</span>
+          <i data-feather="users" class="text-theme-light small-icon me-3"></i><span class="font-sm">Customers</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" href="#">
-          <i data-feather="bar-chart-2" class="small-icon me-3"></i><span class="font-sm">Reports</span>
+          <i data-feather="bar-chart-2" class="text-theme-light small-icon me-3"></i><span class="font-sm">Reports</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" href="#">
-          <i data-feather="layers" class="small-icon me-3"></i><span class="font-sm">Integrations</span>
+          <i data-feather="layers" class="text-theme-light small-icon me-3"></i><span class="font-sm">Integrations</span>
         </a>
       </li>
     </ul>
 
     <hr>
-    <div class="dropdown">
+    <div class="dropdown ms-3 mb-3">
       <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-        <strong>mdo</strong>
+        <img src="https://avatars.githubusercontent.com/u/1183747" alt="" width="32" height="32" class="rounded-circle me-2">
+        <strong>harrisreynolds</strong>
       </a>
       <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
         <li><a class="dropdown-item" href="#">New project...</a></li>
         <li><a class="dropdown-item" href="#">Settings</a></li>
         <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li><hr class="dropdown-divider"></li>
+        <li>
+          <hr class="dropdown-divider">
+        </li>
         <li><a class="dropdown-item" href="#">Sign out</a></li>
       </ul>
     </div>
   </div>
 
-  <div>
-    Main
+  <div class="col-12 col-md-9 col-lg-10 pt-3 ps-3 bg-content-theme-color">
+    <h3>Dashboard</h3>
+
+    <div class="me-4 h-96 border border-5 border-dashed rounded-3">
+
+    </div>
+
   </div>
 </div>
