--- a/app/views/templates/dashboard_sidebar.html.erb
+++ b/app/views/templates/dashboard_sidebar.html.erb
@@ -71,7 +71,7 @@
   </div>
 
   <div class="col-12 col-md-9 col-lg-10 pt-3 ps-3 bg-content-theme-color">
-    <h3>Dashboard</h3>
+    <h3 class="spacing-close">Dashboard</h3>
 
     <div class="me-4 h-96 border border-5 border-dashed rounded-3">
 
