--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -12,4 +12,8 @@
     <%= link_to "Dashboard with Top Nav", templates_dashboard_top_nav_path %>
   </div>
 
+  <div>
+    <%= link_to "Modal", templates_modal_path %>
+  </div>
+
 </div>
