--- a/app/assets/stylesheets/beautiful_bootstrap/spacing.scss
+++ b/app/assets/stylesheets/beautiful_bootstrap/spacing.scss
@@ -1,7 +1,15 @@
-w-16 {
+.w-12 {
+  width: 2.5rem;
+}
+
+.h-12 {
+  height: 2.5rem;
+}
+
+.w-16 {
   width: 16px;
 }
 
-h-16 {
+.h-16 {
   height: 16px;
 }
