--- a/app/assets/stylesheets/bootstrap/_modal.scss
+++ b/app/assets/stylesheets/bootstrap/_modal.scss
@@ -129,7 +129,7 @@
   align-items: center; // vertically center
   justify-content: flex-end; // Right align buttons with flex property because text-align doesn't work on flex items
   padding: $modal-inner-padding - $modal-footer-margin-between * .5;
-  border-top: $modal-footer-border-width solid $modal-footer-border-color;
+  // border-top: $modal-footer-border-width solid $modal-footer-border-color;
   @include border-bottom-radius($modal-content-inner-border-radius);
 
   // Place margin between footer elements
