--- a/app/views/templates/modal.html.erb
+++ b/app/views/templates/modal.html.erb
@@ -1,2 +1,38 @@
-<h1>Templates#modal</h1>
-<p>Find me in app/views/templates/modal.html.erb</p>
+<div class="container my-5">
+  <h1>Beautiful Bootstrap Modal</h1>
+  <p>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Launch demo modal
+    </button>
+  </p>
+
+  <div id="exampleModal" class="modal fade" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body">
+          <div class="d-flex p-3">
+            <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-danger h-12 w-12"
+                 style="--bs-bg-opacity: .2;">
+              <i class="fas fa-exclamation-triangle text-danger"></i>
+            </div>
+
+            <div class="d-flex flex-column ms-3">
+
+              <h3 class="fs-5 spacing-close">Deactivate Account</h3>
+
+              <div class="font-sm text-muted">
+                Are you sure you want to deactivate your account? All of your data will be permanently removed.
+                This action cannot be undone.
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer bg-">
+          <button type="button" class="btn btn-outline-secondary font-sm" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-danger font-sm">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
