--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -16,4 +16,8 @@
     <%= link_to "Modal", templates_modal_path %>
   </div>
 
+  <div>
+    <%= link_to "Goal Landing Page", templates_goal_landing_page_path %>
+  </div>
+
 </div>
