--- a/app/views/templates/dashboard_sidebar.html.erb
+++ b/app/views/templates/dashboard_sidebar.html.erb
@@ -14,7 +14,7 @@
 </header>
 
 <div class="d-flex vh-100">
-  <div id="sidebarMenu" class="col-md-3 col-xxl-2 d-md-flex flex-column flex-shrink-0 bg-theme-color text-white sidebar collapse">
+  <div id="sidebarMenu" class="d-md-flex flex-column flex-shrink-0 bg-theme-color text-white sidebar collapse">
     <a href="/" class="d-none d-md-flex align-items-center ms-3 my-3 me-md-auto text-white text-decoration-none">
       <i class="fa fas fa-flask fs-4 me-2"></i> <span class="fs-4 font-xbold spacing-close">Nimble Labs</span>
     </a>
