Basic vue app for accounts

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,7 +11,7 @@
   <div>
     <div class="text-uppercase mb-3">Products and Services</div>
     <div><%= link_to "Templates", templates_path, class: 'link link-hover' %></div>
-    <div><a class="link link-hover">Design</a></div>
+    <div><%= link_to "App", app_index_path, class: 'link link-hover' %></div>
     <div><a class="link link-hover">Marketing</a></div>
     <div><a class="link link-hover">Advertisement</a></div>
   </div>
