--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -8,8 +8,7 @@
   <%= csp_meta_tag %>
 
   <%= javascript_pack_tag 'app' %>
-
-  <%= stylesheet_link_tag 'templates' %>
+  <%= stylesheet_link_tag 'app' %>
 </head>
 <body>
 
