--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Rails MVP Starter</title>
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
