Work on table component

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -17,6 +17,10 @@
   </div>
 
   <div>
+    <%= link_to "Table", templates_table_path %>
+  </div>
+
+  <div>
     <%= link_to "Goal Landing Page", templates_goal_landing_page_path %>
   </div>
 
