--- a/app/views/templates/table.html.erb
+++ b/app/views/templates/table.html.erb
@@ -1,2 +1,35 @@
-<h1>Templates#table</h1>
-<p>Find me in app/views/templates/table.html.erb</p>
+<div class="container my-5">
+  <h1 class="mb-5">Beautiful Bootstrap Table</h1>
+
+  <div class="table-responsive border border-1 rounded-3 shadow-sm">
+    <table class="w-100">
+      <thead class="bg-content-theme-color font-sm text-uppercase border-bottom">
+      <tr>
+        <th class="py-2 px-3" scope="col">#</th>
+        <th class="py-2 px-3" scope="col">First</th>
+        <th class="py-2 px-3" scope="col">Last</th>
+        <th class="py-2 px-3" scope="col">Handle</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th class="py-1 px-3"  scope="row">1</th>
+        <td class="py-1 px-3" >Mark</td>
+        <td class="py-1 px-3" >Otto</td>
+        <td class="py-1 px-3" >@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td colspan="2">Larry the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
