More table love

--- a/app/assets/stylesheets/templates.scss
+++ b/app/assets/stylesheets/templates.scss
@@ -17,6 +17,7 @@ body {
 @import 'beautiful_bootstrap/modals';
 @import 'beautiful_bootstrap/borders';
 @import 'beautiful_bootstrap/colors';
+@import 'beautiful_bootstrap/tables';
 
 @import 'pattern';
 
