--- a/app/views/templates/table.html.erb
+++ b/app/views/templates/table.html.erb
@@ -2,32 +2,32 @@
   <h1 class="mb-5">Beautiful Bootstrap Table</h1>
 
   <div class="table-responsive border border-1 rounded-3 shadow-sm">
-    <table class="w-100">
-      <thead class="bg-content-theme-color font-sm text-uppercase border-bottom">
-      <tr>
-        <th class="py-2 px-3" scope="col">#</th>
-        <th class="py-2 px-3" scope="col">First</th>
-        <th class="py-2 px-3" scope="col">Last</th>
-        <th class="py-2 px-3" scope="col">Handle</th>
+    <table class="w-100 table">
+      <thead class="bg-gray-100 gray-600 font-xsm text-uppercase border-bottom">
+      <tr class="border-bottom">
+        <th class="p-3 fw-normal" scope="col">#</th>
+        <th class="p-3 fw-normal" scope="col">First</th>
+        <th class="p-3 fw-normal" scope="col">Last</th>
+        <th class="p-3 fw-normal" scope="col">Handle</th>
       </tr>
       </thead>
       <tbody>
       <tr>
-        <th class="py-1 px-3"  scope="row">1</th>
-        <td class="py-1 px-3" >Mark</td>
-        <td class="py-1 px-3" >Otto</td>
-        <td class="py-1 px-3" >@mdo</td>
+        <td class="p-3">1</td>
+        <td class="p-3" >Mark</td>
+        <td class="p-3" >Otto</td>
+        <td class="p-3" >@mdo</td>
       </tr>
       <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
+        <td class="p-3">2</td>
+        <td class="p-3">Jacob</td>
+        <td class="p-3">Thornton</td>
+        <td class="p-3">@fat</td>
       </tr>
       <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
+        <td class="p-3">3</td>
+        <td class="p-3" colspan="2">Larry the Bird</td>
+        <td class="p-3">@twitter</td>
       </tr>
       </tbody>
     </table>
