--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,8 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= javascript_include_tag "application", defer: true %>
-  <% if !Rails.env.test? %>
-    <%= stylesheet_link_tag Rails.application.config.css_framework %>
-  <% end %>
+  <%= javascript_pack_tag "application" %>
+  <%= stylesheet_link_tag 'bootstrap' %>
 </head>
 
 <body>
