--- a/app/views/static/tailwind_demo.html.erb
+++ b/app/views/static/tailwind_demo.html.erb
@@ -7,8 +7,8 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= javascript_include_tag "application", defer: true %>
-  <%= stylesheet_link_tag 'tailwind' %>
+  <%= javascript_pack_tag "application" %>
+  <%= stylesheet_link_tag 'application.tailwind' %>
 </head>
 
 <body>
