Support for redeeming coupongs

--- a/app/views/devise/registrations/deal_signup.html.erb
+++ b/app/views/devise/registrations/deal_signup.html.erb
@@ -1,47 +1,1 @@
-<div class="row justify-content-md-center my-4">
-  <div class="col-12 col-md-5">
-
-    <div class="card shadow-lg">
-      <div class="card-body">
-
-        <h1 class="display-6 mt-2 mb-4 text-center">Get Started!</h1>
-
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
-
-          <div class="mb-3 form-container">
-            <%= f.text_field :name, autofocus: true, class: "form-control input input-bordered", placeholder: 'Name' %>
-          </div>
-
-          <div class="mb-3 form-container">
-            <%= f.email_field :email, autocomplete: "email", class: "form-control input input-bordered", placeholder: 'Email' %>
-          </div>
-
-          <div class="mb-3 form-container">
-            <%= f.password_field :password, autocomplete: "new-password", class: "form-control input input-bordered", placeholder: 'Password' %>
-
-            <% if @minimum_password_length %>
-              <div id="passwordHelpBlock" class="form-text">
-                Your password must be at least <%= @minimum_password_length %> characters long.
-              </div>
-            <% end %>
-
-          </div>
-
-          <div class="mb-3 form-container">
-            <%= f.text_field :coupon_code, autofocus: true, class: "form-control input input-bordered", placeholder: 'Coupon Code' %>
-            <div class="form-text">
-              Enter your App Sumo coupon code here.
-            </div>
-          </div>
-          
-          <div class="actions mt-2">
-            <%= f.submit "Sign up", class: 'btn btn-primary btn-min rounded-pill' %>
-          </div>
-        <% end %>
-
-      </div>
-    </div>
-
-  </div>
-</div>
+<%= render 'devise/registrations/new_deal' %>
