--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,54 @@
-<div class="row justify-content-md-center my-4">
-  <div class="col-12 col-md-5">
+<% if session[:deal_signup] %>
+    <%= render 'devise/registrations/new_deal' %>
+<% else %>
 
-    <div class="card shadow-lg">
-      <div class="card-body">
+  <div class="row justify-content-md-center my-4">
+    <div class="col-12 col-md-5">
 
-        <h1 class="display-6 mt-2 mb-4 text-center">Get Started!</h1>
+      <div class="card shadow-lg">
+        <div class="card-body">
 
-        <%= google_sign_in_button class: 'btn btn-blue w-100 rounded-pill', proceed_to: api_v1_process_google_oauth_url do %>
-          <%= image_tag('google.png', alt: 'Google', width: 32, height: 32) %>
-          <span class="p-2">Sign up with Google</span>
-        <% end %>
+          <h1 class="display-6 mt-2 mb-4 text-center">Get Started!</h1>
 
-        <%= render 'devise/shared/or_content' %>
+          <%= google_sign_in_button class: 'btn btn-blue w-100 rounded-pill', proceed_to: api_v1_process_google_oauth_url do %>
+            <%= image_tag('google.png', alt: 'Google', width: 32, height: 32) %>
+            <span class="p-2">Sign up with Google</span>
+          <% end %>
 
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
+          <%= render 'devise/shared/or_content' %>
 
-          <div class="mb-3 form-container">
-            <%= f.text_field :name, autofocus: true, class: "form-control input input-bordered", placeholder: 'Name' %>
-          </div>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
 
-          <div class="mb-3 form-container">
-            <%= f.email_field :email, autocomplete: "email", class: "form-control input input-bordered", placeholder: 'Email' %>
-          </div>
+            <div class="mb-3 form-container">
+              <%= f.text_field :name, autofocus: true, class: "form-control input input-bordered", placeholder: 'Name' %>
+            </div>
 
-          <div class="mb-3 form-container">
-            <%= f.password_field :password, autocomplete: "new-password", class: "form-control input input-bordered", placeholder: 'Password' %>
+            <div class="mb-3 form-container">
+              <%= f.email_field :email, autocomplete: "email", class: "form-control input input-bordered", placeholder: 'Email' %>
+            </div>
 
-            <% if @minimum_password_length %>
-              <div id="passwordHelpBlock" class="form-text">
-                Your password must be at least <%= @minimum_password_length %> characters long.
-              </div>
-            <% end %>
+            <div class="mb-3 form-container">
+              <%= f.password_field :password, autocomplete: "new-password", class: "form-control input input-bordered", placeholder: 'Password' %>
 
-          </div>
+              <% if @minimum_password_length %>
+                <div id="passwordHelpBlock" class="form-text">
+                  Your password must be at least <%= @minimum_password_length %> characters long.
+                </div>
+              <% end %>
 
-          <div class="actions mt-2">
-            <%= f.submit "Sign up", class: 'btn btn-primary btn-min rounded-pill' %>
-          </div>
-        <% end %>
+            </div>
 
-        <%= render "devise/shared/links" %>
+            <div class="actions mt-2">
+              <%= f.submit "Sign up", class: 'btn btn-primary btn-min rounded-pill' %>
+            </div>
+          <% end %>
+
+          <%= render "devise/shared/links" %>
+        </div>
       </div>
-    </div>
 
+    </div>
   </div>
-</div>
+
+<% end %>
