Support for recaptcha

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,7 +36,7 @@
           </div>
 
           <div class="actions mt-2">
-            <%= f.submit "Sign up", class: 'btn btn-primary btn-min rounded-pill' %>
+            <%= invisible_recaptcha_tags text: 'Sign up', class: "btn btn-primary btn-min rounded-pill" %>
           </div>
         <% end %>
 
