--- a/app/views/user_mailer/lead_email.html.erb
+++ b/app/views/user_mailer/lead_email.html.erb
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
 </head>
 <body>
 
-<div class="container mt-3">
+<div class="container">
+  <%= image_tag 'Welcome.png', class: 'rounded', style: 'max-width: 800px' %>
 
-  <h1>Welcome to example.com</h1>
-  <p>
-    You have successfully signed up to example.com,
-    your email is: <%= @lead.email %>.<br>
+  <h1 class="my-5">Hello and welcome!</h1>
+
+  <p class="mb-4">
+    Thank you for signing up for Rails MVP Starter newsletter.  We can't wait to help you launch your application faster!
   </p>
 
-  <p>
-    <%= link_to 'Visit Us!', root_url, class: "btn btn-primary" %>
+  <p class="mb-4">
+    Also, and this is important, please hit the reply button and let me know how I can to help!
   </p>
 
-  <p>Thanks for joining and have a great day!</p>
+  <p class="mb-4">
+    Build something great,
+  </p>
+
+  <p class="mb-4">
+    -- Harris Reynolds
+  </p>
 
 </div>
+
 </body>
 </html>
