Run on Rails 7 without Webpacker

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -10,6 +10,7 @@ $pink: #ED2190 !default;
 @import 'bootstrap/bootstrap';
 @import 'beautiful_bootstrap/tables';
 @import 'fontawesome-all';
+@import 'loading-spinner';
 @import url('https://rsms.me/inter/inter.css');
 
 body {
