--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -11,7 +11,7 @@
       const STARTER_SYSTEM_ID = '<%= get_auth_token %>';
   </script>
 
-  <%= javascript_pack_tag 'app' %>
+  <%= javascript_include_tag "app" %>
   <%= stylesheet_link_tag 'app' %>
 </head>
 <body>
