--- a/app/views/layouts/templates.html.erb
+++ b/app/views/layouts/templates.html.erb
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Beautiful Bootstrap Templates</title>
 
-  <%= javascript_pack_tag "application" %>
+  <%= javascript_include_tag "application", defer: true %>
   <%= stylesheet_link_tag 'templates' %>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
 </head>
